-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.1
-
Mac OS X 10.9.5
-
I056811053e2287c93ba9c0afb5ceddef939f46ce
Quick Text item linkColor works only when initializing the component. After update it doesn't change the color even onLinkColorChanged is triggered.
Text{
id: text
text: "<a href=\"file://\">StyledText link red to green</a>."
textFormat: Text.StyledText
linkColor: "red"
onLinkActivated: {
text.linkColor = "green"
}
onLinkColorChanged: console.log("link color changed " + text.linkColor)
}