Fix Text item linkColor update

Changed linkColor to update node correctly when link color is changed.

Change-Id: I056811053e2287c93ba9c0afb5ceddef939f46ce
Task-number: QTBUG-45356
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@theqtcompany.com>