src/quick/items/qquicktext.cpp
@@ -1584,7 +1584,10 @@ void QQuickText::setLinkColor(const QColor &color)
         return;
 
     d->linkColor = rgb;
-    update();
+    if (isComponentComplete()) {
+        d->updateType = QQuickTextPrivate::UpdatePaintNode;
+        update();
+    }
     emit linkColorChanged();
 }
 
